--- a/templates/design-desktop-logout.css
+++ b/templates/design-desktop-logout.css
@@ -22,12 +22,12 @@ input[type="submit"] {
 	height:50px;
 	padding:10px;
 	margin-left:-1px;
-	background-color:#60bffb;
+	background-color:#404040;/*60bffb*/
 	border:none;
-	border-bottom:2px solid #2e84bb;
+	border-bottom:2px solid #555;/*2e84bb*/
 	border-radius:4px;
 	font-size:15pt;
-	color:#ffffff;
+	color:#4ea770;
 	-webkit-transition:all .25s ease-in;
 	-moz-transition:all .25s ease-in;
 	-o-transition:all .25s ease-in;
@@ -35,7 +35,7 @@ input[type="submit"] {
 	cursor:pointer;
 }
 input[type="submit"]:hover {
-	background-color:#53a6da;
+	background-color:#303030;
 	color:#f5f5f5;
 }
 	#container_login {
