--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -124,7 +124,7 @@ h3 {
 	}
 
 /******* CAS SPECIFIQUES *******/
-#menu {width:100%; height:40px; background-color:#37a3e8; margin-top:0px; position:relative; z-index:1000; border-bottom:2px solid #2e84bb; border-radius:0 0 3px 3px;}
+#menu {width:100%; height:40px; background-color:#404040; margin-top:0px; position:relative; z-index:1000; border-bottom:2px solid #555; border-radius:0 0 3px 3px;}/*background-color:#37a3e8;border-bottom:2px solid #2e84bb;*/
 #menu li {
 	width:auto; height:40px;
 	list-style:none;
@@ -137,7 +137,7 @@ h3 {
 #menu li#logo {width:250px; margin:0 -4px 0 -40px;}
 #menu li#user {position:absolute; right:0px; min-width:145px;}
 #menu li:hover {background-color:#0078d1;}
-#menu li a {height:40px; width:100%; line-height:40px; color:#ffffff; text-decoration:none; text-align:left; display:inline-block; padding:0 13px 0 13px;}
+#menu li a {height:40px; width:100%; line-height:40px; color:#4ea770; text-decoration:none; text-align:left; display:inline-block; padding:0 13px 0 13px;}
 #menu li#logo a {text-align:center; margin-left:-13px;}
 #menu li a:hover {color:#c0fffd;}
 /* tous les icone dans le menu */
