--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -8,16 +8,17 @@ body {
 	background-repeat:repeat-y;
 	background-position:top left;
 }
-	ul#mois {margin:0; padding:0; list-style:none; width:115px; height:28px; display:block; background-image:url('images/spinner.png');}
-	ul#mois li {line-height:28px; list-style:inside none; padding:0; float:left; display:block; position:relative;}
-	ul#mois li:hover {display:block;}
-	ul#mois li a {color:#909090; text-decoration:none; display:block; position:relative; height:28px; width:115px; padding-left:10px; padding-right:8px;}
-	ul#mois li a:hover {color:#5fc9f0;}
-	ul#mois li > ul {display:none; width:75px; position:absolute; background-color:#f9f9f9; text-align:left; border-radius:0px 0px 3px 3px; border-bottom:2px solid #d8d8d8;}
-	ul#mois li:hover > ul {display:block;}
-	ul#mois li > ul li {height:28px; width:97px; line-height:28px; font-size:18px; margin-left:-40px; padding:0;}
-	ul#mois li > ul li a {font-size:15px; width:100%;}
-	ul#mois li:hover > ul li a:hover {color:#ffffff; background-color:#a0a0a0}
+	#mois {margin:0; padding:0; list-style:none; width:115px; height:28px; display:block; /*background-image:url('images/spinner.png');*/}
+	#mois li {line-height:28px; list-style:inside none; padding:0; float:left; display:block; position:relative;}
+	#mois li:hover {display:block;}
+	#mois li #current_mounth {color:#909090; text-decoration:none; display:block; position:relative; height:28px; width:115px; padding:5px 12px;}
+	#mois li #current_mounth:hover {color:#5fc9f0;}
+	#mois li #imgMenuPlus {position:relative; float:right; top:10px; right:24px;}
+	#mois li > ul {display:none; width:75px; position:absolute; background-color:#f9f9f9; text-align:left; border-radius:0px 0px 3px 3px; border-bottom:2px solid #d8d8d8;}
+	#mois li:hover > ul {/*display:block;*/}
+	#mois li > ul li {height:28px; width:97px; line-height:28px; font-size:18px; margin-left:-40px; padding:0;}
+	#mois li > ul li a {font-size:15px; width:100%; padding:0 8px 0 10px;}
+	#mois li:hover > ul li a:hover {color:#ffffff; background-color:#a0a0a0}
 
 /* CAS GENARAUX */
 th, td {padding:2px 10px 2px 15px;}
@@ -122,6 +123,19 @@ h3 {
 	.button_link:hover a {
 		color:#959595;
 	}
+.button_mounth {
+	padding:0;
+	background-color:#e5e5e5;
+	border:none;
+	border-bottom:2px solid #d5d5d5;
+	-webkit-transition: all .2s ease-in;
+	-moz-transition: all .2s ease-in;
+	-o-transition: all .2s ease-in;
+	transition: all .2s ease-in;
+	border-radius:4px;
+	font-size:16px;
+}
+	.button_mounth ul li a {text-align:left;}
 
 /******* CAS SPECIFIQUES *******/
 #menu {width:100%; height:46px; background-color:#404040; margin-top:0px; position:relative; z-index:1000; border-bottom:2px solid #555;}/*background-color:#37a3e8; border-bottom:2px solid #2e84bb; border-radius:0 0 3px 3px;*/
