--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -10,7 +10,7 @@ body {
 }
 	#mois {margin:0; padding:0; list-style:none; width:115px; height:28px; display:block; /*background-image:url('images/spinner.png');*/}
 	#mois li {line-height:28px; list-style:inside none; padding:0; float:left; display:block; position:relative;}
-	#mois li:hover {display:block;}
+	#mois li:hover {display:block; cursor:pointer;}
 	#mois li #current_mounth {color:#909090; text-decoration:none; display:block; position:relative; height:28px; width:115px; padding:5px 12px;}
 	#mois li #current_mounth:hover {color:#5fc9f0;}
 	#mois li #imgMenuPlus {position:relative; float:right; top:10px; right:24px;}
