--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -673,10 +673,13 @@ tr {
 			border-radius:4px 4px 0 0;
 			padding:12px 0;
 		}
-			.panel-header span {
-				color:#404040;
-				margin:0 15px;
+			.panel-header a {
+				text-decoration:none;
 			}
+				.panel-header span {
+					color:#404040;
+					margin:0 15px;
+				}
 		.panel-body {
 			background-color:#fafafa;
 		}
