--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -4,32 +4,13 @@ body {
 	padding:0;
 	overflow-x:hidden;
 	color:#444444;
-	background-image:url('images/background.png');
+	/*background-image:url('images/background.png');
 	background-repeat:repeat-y;
 	background-position:top left;
-	min-width:550px;
+	min-width:550px;*/
+	background-color:#eaeaea;
 }
-	#mois {margin:0; padding:0; list-style:none; width:115px; height:28px; display:block; /*background-image:url('images/spinner.png');*/}
-	#mois li {line-height:28px; list-style:inside none; padding:0; float:left; display:block; position:relative;}
-	#mois li:hover {display:block; cursor:pointer;}
-	#mois li #current_mounth {color:#909090; text-decoration:none; display:block; position:relative; height:28px; width:115px; padding:5px 12px; text-align:left;}
-	#mois li #current_mounth:hover {color:#5fc9f0;}
-	#mois li .imgMenuPlus {
-		position:relative;
-		float:right;
-		top:10px;
-		right:24px;
-		-webkit-transition:-webkit-transform 0.2s ease-in-out;
-		-moz-transition:-moz-transform 0.2s ease-in-out;
-		transition:transform 0.2s ease-in-out;
-	}
-	#mois li > ul {display:none; width:75px; position:absolute; background-color:#f9f9f9; text-align:left; margin-top:-1px; border-radius:0px 0px 3px 3px; border-bottom:2px solid #d8d8d8;}
-	#mois li:hover > ul {/*display:block;*/}
-	#mois li > ul li {height:28px; width:97px; line-height:28px; font-size:18px; margin-left:-40px; padding:0;}
-	#mois li > ul li a {color:#909090; display:block; font-size:15px; width:100%; padding:0 8px 0 10px;}
-	#mois li:hover > ul li a:hover {color:#ffffff; background-color:#a0a0a0}
-
-/* CAS GENARAUX */
+/* CAS GENERAUX */
 th, td {padding:2px 10px 2px 15px;}
 select {width:160px; height:26px; font-size:14px; padding:5px 10px 5px 10px;}
 input, select {
@@ -149,9 +130,10 @@ tr {
 }
 
 /******* CAS SPECIFIQUES *******/
-#menu {width:100%; height:46px; background-color:#404040; margin-top:0px; position:relative; z-index:1000; border-bottom:2px solid #555;}/*background-color:#37a3e8; border-bottom:2px solid #2e84bb; border-radius:0 0 3px 3px;*/
+#menu {width:100%; height:46px; background-color:#fff; margin-top:0px; position:relative; z-index:1000;}/*background-color:#37a3e8; border-bottom:2px solid #2e84bb; border-radius:0 0 3px 3px;*/
 #menu li {
-	width:auto; height:46px;
+	width:auto;
+	height:46px;
 	list-style:none;
 	display:inline-block;
 	-webkit-transition:all .07s ease-in;
@@ -159,10 +141,12 @@ tr {
 	-o-transition:all .07s ease-in;
 	transition:all .07s ease-in;
 }
-#menu li#logo {width:250px; margin:0 -4px 0 -40px;}
+#menu li#logo {width:250px; margin:0 -4px 0 -40px; background-color:#232b2e;}
+#menu li#logo a {color:#fff;}
+#menu li#logo:hover {background-color:#161b1d;}
 #menu li#user {position:absolute; right:0px; min-width:191px;}
 #menu li:hover {background-color:#232b2e;}/*#0078d1*/ /*4ea770*/
-#menu li a {height:46px; width:100%; line-height:46px; color:#fff; text-decoration:none; text-align:left; display:inline-block; padding:0 13px 0 13px;}
+#menu li a {height:46px; width:100%; line-height:46px; color:#676767; text-decoration:none; text-align:left; display:inline-block; padding:0 13px 0 13px;}
 #menu li#logo a {text-align:center; margin-left:-13px;}
 #menu li a:hover {color:#fff;}
 #menu li#active {background-color:#70bc99;}
@@ -174,7 +158,7 @@ tr {
 #menu li a span.imgMenuPlus img {width:11px; height:8px; position:absolute; top:7px; left:0;}
 /* avatar dans le menu */
 #menu li a span#avatarMenu {width:46px; height:46px; bottom:1px; position:relative; display:inline-block; vertical-align:middle; border:none; margin:0 8px 0 -13px;}
-#menu li a span#avatarMenu img {width:46px; height:46px; position:absolute; left:0;}
+#menu li a span#avatarMenu img {width:42px; height:42px; position:absolute; left:2px; top:2px; border-radius:24px;}
 /* sous menu */
 #menu li ul {display:none; width:105px; background-color:#70bc99; border-radius:0px 0px 3px 3px; border-bottom:2px solid #4ea770; border-top:2px solid #555; position:absolute;}/*border-bottom:2px solid #00528e; border-top:2px solid #0078d1;*/
 #menu li#user ul {margin-left:46px;}
@@ -188,17 +172,34 @@ tr {
 #menu li ul li, #menu li ul li:first-child {width:145px; margin:0 0 0 -40px; padding:0; height:30px; line-height:30px;}
 #menu li ul li a {height:30px; line-height:30px; width:100%; display:inline-block; text-align:left; font-size:15px;}
 #menu li:hover ul li:hover {background-color:#5D9C7F;}/*3a7d54*/
-/* icones sous menu Options*/
-/*#menu li ul li.dump {background-image:url('images/dump.png');}
-#menu li ul li.settings {list-style-image:url('images/settings.png');}
-#menu li ul li.logout {list-style-image:url('images/logout.png');}*/
+
+#mois {margin:0; padding:0; list-style:none; width:115px; height:28px; display:block; /*background-image:url('images/spinner.png');*/}
+#mois li {line-height:28px; list-style:inside none; padding:0; float:left; display:block; position:relative;}
+#mois li:hover {display:block; cursor:pointer;}
+#mois li #current_mounth {color:#909090; text-decoration:none; display:block; position:relative; height:28px; width:115px; padding:5px 12px; text-align:left;}
+#mois li #current_mounth:hover {color:#5fc9f0;}
+#mois li .imgMenuPlus {
+	position:relative;
+	float:right;
+	top:10px;
+	right:24px;
+	-webkit-transition:-webkit-transform 0.2s ease-in-out;
+	-moz-transition:-moz-transform 0.2s ease-in-out;
+	transition:transform 0.2s ease-in-out;
+}
+#mois li > ul {display:none; width:75px; position:absolute; background-color:#f9f9f9; text-align:left; margin-top:-1px; border-radius:0px 0px 3px 3px; border-bottom:2px solid #d8d8d8;}
+#mois li:hover > ul {/*display:block;*/}
+#mois li > ul li {height:28px; width:97px; line-height:28px; font-size:18px; margin-left:-40px; padding:0;}
+#mois li > ul li a {color:#909090; display:block; font-size:15px; width:100%; padding:0 8px 0 10px;}
+#mois li:hover > ul li a:hover {color:#ffffff; background-color:#a0a0a0}
+
 #barLeft {
 	width:250px;
 	top:0;
 	left:0;
 	bottom:0;
 	position:absolute;
-	background-color:#f3f3f3;
+	background-color:#3E4547;
 	z-index:3;
 }
 	#barLeft-content {
@@ -586,6 +587,7 @@ tr {
 		-moz-opacity:0.3;
 		border-radius:3px;
 		border-bottom:2px solid #ac6f75;
+		display:none;
 	}
 		#notice #button {
 			cursor:pointer;
@@ -667,7 +669,7 @@ tr {
 	}
 		.panel-header {
 			width:100%;
-			background-color:#cfcfcf;
+			background-color:#f9f9f9;
 			-webkit-border-radius:4px 4px 0 0;
 			-moz-border-radius:4px 4px 0 0;
 			-o-border-radius:4px 4px 0 0;
