--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -4,13 +4,10 @@ body {
 	padding:0;
 	overflow-x:hidden;
 	color:#444444;
-	/*background-image:url('images/background.png');
-	background-repeat:repeat-y;
-	background-position:top left;
-	min-width:550px;*/
 	background-color:#eaeaea;
 }
 /* CAS GENERAUX */
+table {background-color:#fff;}
 th, td {padding:2px 10px 2px 15px;}
 select {width:160px; height:26px; font-size:14px; padding:5px 10px 5px 10px;}
 input, select {
@@ -130,8 +127,8 @@ tr {
 }
 
 /******* CAS SPECIFIQUES *******/
-#menu {width:100%; height:46px; background-color:#fff; margin-top:0px; position:relative; z-index:1000;}/*background-color:#37a3e8; border-bottom:2px solid #2e84bb; border-radius:0 0 3px 3px;*/
-#menu li {
+.menu {width:100%; height:46px; background-color:#fff; margin-top:0px; position:relative; z-index:1000;}
+.menu li {
 	width:auto;
 	height:46px;
 	list-style:none;
@@ -141,37 +138,37 @@ tr {
 	-o-transition:all .07s ease-in;
 	transition:all .07s ease-in;
 }
-#menu li#logo {width:250px; margin:0 -4px 0 -40px; background-color:#232b2e;}
-#menu li#logo a {color:#fff;}
-#menu li#logo:hover {background-color:#161b1d;}
-#menu li#user {position:absolute; right:0px; min-width:191px;}
-#menu li:hover {background-color:#75919C;}
-#menu li a {height:46px; width:100%; line-height:46px; color:#676767; text-decoration:none; text-align:left; display:inline-block; padding:0 13px 0 13px;}
-#menu li#logo a {text-align:center; margin-left:-13px;}
-#menu li a:hover {color:#fff;}
-#menu li#active {background-color:#70bc99;}
+.menu li.logo {width:250px; margin:0 -4px 0 -40px; background-color:#232b2e;}
+.menu li.logo a {color:#fff;}
+.menu li.logo:hover {background-color:#161b1d;}
+.menu li#user {position:absolute; right:0px; min-width:191px;}
+.menu li:hover {background-color:#75919C;}
+.menu li a {height:46px; width:100%; line-height:46px; color:#676767; text-decoration:none; text-align:left; display:inline-block; padding:0 13px 0 13px;}
+.menu li#logo a {text-align:center; margin-left:-13px;}
+.menu li a:hover {color:#fff;}
+.menu li#active {background-color:#70bc99;}
 /* tous les icone dans le menu */
-#menu li a span#imgMenu {width:26px; height:46px; position:relative; display:inline-block; vertical-align:middle; border:none; margin-right:8px;}
-#menu li a span#imgMenu img {width:26px; height:26px; position:absolute; top:10px; left:0;}
+.menu li a span.imgMenu {width:26px; height:46px; position:relative; display:inline-block; vertical-align:middle; border:none; margin-right:8px;}
+.menu li a span.imgMenu img {width:26px; height:26px; position:absolute; top:10px; left:0;}
 /* image de fleche ves le bas */
-#menu li a span.imgMenuPlus {width:11px; height:8px; bottom:8px; position:relative; display:inline-block; vertical-align:middle; border:none; margin-left:8px;}
-#menu li a span.imgMenuPlus img {width:11px; height:8px; position:absolute; top:7px; left:0;}
+.menu li a span.imgMenuPlus {width:11px; height:8px; bottom:8px; position:relative; display:inline-block; vertical-align:middle; border:none; margin-left:8px;}
+.menu li a span.imgMenuPlus img {width:11px; height:8px; position:absolute; top:7px; left:0;}
 /* avatar dans le menu */
-#menu li a span#avatarMenu {width:46px; height:46px; bottom:1px; position:relative; display:inline-block; vertical-align:middle; border:none; margin:0 8px 0 -13px;}
-#menu li a span#avatarMenu img {width:42px; height:42px; position:absolute; left:2px; top:2px; border-radius:24px;}
+.menu li a span#avatarMenu {width:46px; height:46px; bottom:1px; position:relative; display:inline-block; vertical-align:middle; border:none; margin:0 8px 0 -13px;}
+.menu li a span#avatarMenu img {width:42px; height:42px; position:absolute; left:2px; top:2px; border-radius:24px;}
 /* sous menu */
-#menu li ul {display:none; width:105px; background-color:#70bc99; border-radius:0px 0px 3px 3px; border-bottom:2px solid #4ea770; position:absolute;}
-#menu li#user ul {margin-left:46px;}
-#menu li:hover ul {
+.menu li ul {display:none; width:105px; background-color:#70bc99; border-radius:0px 0px 3px 3px; border-bottom:2px solid #4ea770; position:absolute;}
+.menu li#user ul {margin-left:46px;}
+.menu li:hover ul {
 	display:block;
 	-webkit-transition:all .07s ease-in;
 	-moz-transition:all .07s ease-in;
 	-o-transition:all .07s ease-in;
 	transition:all .07s ease-in;
 }
-#menu li ul li, #menu li ul li:first-child {width:145px; margin:0 0 0 -40px; padding:0; height:30px; line-height:30px;}
-#menu li ul li a {height:30px; line-height:30px; width:100%; display:inline-block; text-align:left; font-size:15px;}
-#menu li:hover ul li:hover {background-color:#5D9C7F;}/*3a7d54*/
+.menu li ul li, .menu li ul li:first-child {width:145px; margin:0 0 0 -40px; padding:0; height:30px; line-height:30px;}
+.menu li ul li a {height:30px; line-height:30px; width:100%; display:inline-block; text-align:left; font-size:15px;}
+.menu li:hover ul li:hover {background-color:#5D9C7F;}/*3a7d54*/
 
 #mois {margin:0; padding:0; list-style:none; width:115px; height:28px; display:block; /*background-image:url('images/spinner.png');*/}
 #mois li {line-height:28px; list-style:inside none; padding:0; float:left; display:block; position:relative;}
@@ -198,7 +195,7 @@ tr {
 	top:0;
 	left:0;
 	bottom:0;
-	position:absolute;
+	position:fixed;
 	background-color:#3E4547;
 	z-index:3;
 }
