--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -161,7 +161,7 @@ tr {
 .navbar li a span#avatarMenu img {width:42px; height:42px; position:absolute; left:2px; top:2px; border-radius:24px;}
 /* sous menu */
 .navbar li ul {display:none; width:105px; background-color:#9dbfcc; border-radius:0px 0px 3px 3px; border-bottom:2px solid #4ea770; position:absolute;}
-.navbar li#user ul {margin-left:46px;}
+.navbar li#user ul {margin-left:46px; margin-top:-1px;}
 .navbar li:hover ul {
 	display:block;
 	-webkit-transition:all .07s ease-in;
@@ -221,7 +221,7 @@ tr {
 			}
 #content {
 	margin:25px 0 0 250px;
-	padding:45px 15px 0 15px;
+	padding:18px 15px 0 15px; /*45*/
 }
 	#message {
 		width:400px;
