--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -221,7 +221,7 @@ tr {
 			}
 #content {
 	margin:25px 0 0 250px;
-	padding:18px 15px 0 15px; /*45*/
+	padding:45px 15px 0 15px;
 }
 	#message {
 		width:400px;
