--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -78,6 +78,9 @@ h3 {
 	font-weight:lighter;
 	font-size:18pt;
 	color:#5b7586;
+	-webkit-margin-before:0em;
+	-moz-margin-before:0em;
+	margin-before:0em;
 }
 tr {
 	height:30px;
