--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -131,7 +131,7 @@ tr {
 
 /******* CAS SPECIFIQUES *******/
 .navbar {width:100%; height:46px; background-color:#fff; top:0; position:fixed; z-index:1000;}
-.navbar ul {margin-top:0px;}
+.navbar ul:first-child {margin-top:0px; padding-left:0;}
 .navbar li {
 	width:auto;
 	height:46px;
@@ -143,14 +143,13 @@ tr {
 	transition:all .07s ease-in;
 	cursor:pointer;
 }
-.navbar li.logo {width:250px; margin:0 -4px 0 -40px; background-color:#232b2e;}
+.navbar li.logo {width:250px; margin:0 -4px 0 0; background-color:#232b2e;}
 .navbar li.logo a {color:#fff;}
 .navbar li.logo:hover {background-color:#161b1d;}
 .navbar li#user {position:absolute; right:0px; min-width:191px;}
 .navbar li:hover {background-color:#75919C;}
 .navbar li.extend {top:-7px; position: relative;}
-.navbar li a {height:46px; width:100%; line-height:46px; color:#676767; text-decoration:none; text-align:left;  padding:0 13px 0 13px;}
-.navbar li#logo a {text-align:center; margin-left:-13px;}
+.navbar li a {height:46px; width:100%; line-height:46px; color:#676767; text-decoration:none; text-align:left; padding:0 13px 0 13px;}
 .navbar li a:hover {color:#fff;}
 .navbar li#active {background-color:#70bc99;}
 /* tous les icone dans le menu */
@@ -716,7 +715,8 @@ tr {
 					margin:15px;
 				}
 			.graphic-container {
-				height:330px;
+				height:270px;
+				padding:30px 0;
 			}
 				.graphic-legend {
 					margin-top:0;
