--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -128,6 +128,9 @@ tr {
 	border-radius:4px;
 	font-size:16px;
 }
+.fa {
+	margin-right:10px;
+}
 
 /******* CAS SPECIFIQUES *******/
 .navbar {width:100%; height:46px; background-color:#fff; top:0; position:fixed; z-index:1000;}
@@ -700,20 +703,28 @@ tr {
 			.panel-body-content {
 				padding:15px;
 			}
-				.panel-body table {
-					width:100%;
-					margin:0;
+			.panel-body .nb-op {
+				background-color:#00aacc;
+			}
+				.panel-body-content h3 {
+					margin-top:15px;
+					text-align:center;
+					color:#fff;
 				}
-					.panel-body tr:nth-child(odd){
-						background-color:#fbfbfb;
-					}
-					.panel-body tr:hover {
-						background-color:#e6e6e6;
-						color:#888888;
-					}
-				.panel-body p {
-					margin:15px;
+			.panel-body table {
+				width:100%;
+				margin:0;
+			}
+				.panel-body tr:nth-child(odd){
+					background-color:#fbfbfb;
 				}
+				.panel-body tr:hover {
+					background-color:#e6e6e6;
+					color:#888888;
+				}
+			.panel-body p {
+				margin:15px;
+			}
 			.graphic-container {
 				height:270px;
 				padding:30px 0;
@@ -763,7 +774,17 @@ tr {
 						}
 	.graphic {
 		width:60%;
+		padding:0 8px 0 7px;
 	}
+		.graphic .panel-header {
+			width:auto;
+			margin-left:-7px;
+			padding-right:15px;
+		}
+		.graphic .panel-body {
+			margin:0 -8px 0 -7px;
+		}
+
 	/* galerie des avatars */
 	.avatar_list {
 		width:180px;
