--- a/templates/design-desktop.css
+++ b/templates/design-desktop.css
@@ -141,20 +141,7 @@ tr {
 	.list li {
 		height:30px;
 	}
-		.list .cat1 {background-color:#fff;}
-		.list .cat2 {background-color:#ff0000;}
-		.list .cat3 {background-color:#ff00ff;}
-		.list .cat4 {background-color:#00ff00;}
-		.list .cat5 {background-color:#0000ff;}
-		.list .cat6 {background-color:#0f0f0f;}
-		.list .cat7 {background-color:#f0f0f0;}
-		.list .cat8 {background-color:#54c324;}
-		.list .cat9 {background-color:#65cf3d;}
-		.list .cat10 {background-color:#fff;}
-		.list .cat11 {background-color:#fff;}
-		.list .cat12 {background-color:#fff;}
-		
-		.list i {padding:0 6px;}
+		.list i {padding:0 6px; margin-right:10px;}
 
 /******* CAS SPECIFIQUES *******/
 .navbar {width:100%; height:46px; background-color:#fff; top:0; position:fixed; z-index:1000;}
@@ -808,6 +795,28 @@ tr {
 		.graphic .panel-body {
 			margin:0 -8px 0 -7px;
 		}
+
+		.diagram {
+			width:100%;
+			height:30px;
+			margin-bottom:15px;
+		}
+			.diagram-section {
+				height:30px;
+				display:inline-block;
+			}
+			.cat1 {background-color:#00aacc;}
+			.cat2 {background-color:#ff5555;}
+			.cat3 {background-color:#3E4547;}
+			.cat4 {background-color:#75919C;}
+			.cat5 {background-color:#1fbba6;}
+			.cat6 {background-color:#428bca;}
+			.cat7 {background-color:#9b59b6;}
+			.cat8 {background-color:#f39c12;}
+			.cat9 {background-color:#27ae60;}
+			.cat10 {background-color:#fff;}
+			.cat11 {background-color:#fff;}
+			.cat12 {background-color:#fff;}
 
 	/* galerie des avatars */
 	.avatar_list {
